Revert "Fix overflowing code boxes"
This reverts commit 954e3544304c1c490aab46e134996669aa2be012.

--- a/example/full_example/resources/post.css
+++ b/example/full_example/resources/post.css
@@ -10,12 +10,6 @@ ul, pre, p, h2, .post-content {
     margin-bottom: 1rem;
 }
 
-/* Allow for scrolling code boxes */
-code {
-    display: block;
-    overflow-x:auto;
-}
-
 /* Post Image */
 .post-image {
     max-width: 100%;
